# serde-diff

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: enum.rs  map.rs  nested_struct.rs  set.rs  simple.rs  struct.rs  vec.rs
serde-diff-derive/: Cargo.toml  README.md
serde-diff-derive/src/: lib.rs
serde-diff-derive/src/serde_diff/: args.rs  mod.rs
src/: apply.rs  config.rs  counting_serializer.rs  difference.rs  implementation.rs  lib.rs  tests.rs
struct-diff/: Cargo.toml
struct-diff-derive/: Cargo.toml
struct-diff-derive/src/: args.rs  lib.rs
struct-diff-derive/src/diffable/: args.rs  mod.rs
struct-diff-derive/src/serde_diffable/: args.rs  mod.rs
struct-diff/examples/: nested_struct.rs  serde.rs  simple.rs  static.rs
struct-diff/src/: lib.rs
