[package]
name = "struct-diff"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>", "Karl Bergström <karl.anton.bergstrom@gmail.com"]
readme = "README.md"
exclude = ["examples/*"]
license = "Apache-2.0+MIT"
edition = "2018"
description = "A small helper to serialize the diff of two structs of the same type and apply those differences to other structs."

repository = "https://github.com/aclysma/struct-diff"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct-diff-derive = { path = "struct-diff-derive" }
serde =  { version = "1", features = [ "derive" ] }
serde_derive = { version = "1", features = ["deserialize_in_place"]}

[dev-dependencies]
serde_json = "1.0"
bincode = "1.2"