[package]
name = "serde-diff"
version = "0.4.1"
authors = [
    "Karl Bergström <karl.anton.bergstrom@gmail.com>",
    "Philip Degarmo <aclysma@gmail.com>",
]
readme = "README.md"
exclude = ["examples/*"]
license = "Apache-2.0 OR MIT"
edition = "2018"
description = "A small helper to serialize the diff of two structs of the same type and apply those differences to other structs."

repository = "https://github.com/amethyst/serde-diff"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-diff-derive = { version = "0.4.0", path = "serde-diff-derive" }
serde = { version = "1", features = ["derive"] }
serde_derive = { version = "1", features = ["deserialize_in_place"] }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.2"
rmp-serde = "0.15.0"
maplit = "1.0.2"
