[package]
name = "serde-diff-derive"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com", "Philip Degarmo <aclysma@gmail.com>"]
readme = "README.md"
license = "Apache-2.0+MIT"
edition = "2018"
description = "Derives serde_diff::SerdeDiff"

[badges]
maintenance = { status = "experimental" }

[lib]
name="serde_diff_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
darling = "0.10"
