[package]
name = "serde-diff-derive"
version = "0.4.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>", "Philip Degarmo <aclysma@gmail.com>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"
description = "Derives serde_diff::SerdeDiff"

repository = "https://github.com/amethyst/serde-diff"

[badges]
maintenance = { status = "experimental" }

[lib]
name="serde_diff_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }
darling = "0.12"

[dev-dependencies]
serde = "1"
serde-diff = { path = ".." }
