[package]
name = "struct-diff-derive"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[lib]
name="struct_diff_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
darling = "0.10"
