[package]
name = "struct-diff"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"


[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct-diff-derive = { path = "../struct-diff-derive" }
serde =  { version = "1"}
serde_derive = { version = "1", features = ["deserialize_in_place"]}
serde_json = "1.0"